# rag-app

./: README.md  ports.env  start.sh  stop.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  documents.py
backend/app/core/: config.py
backend/app/core/rag/: HOW_IT_WORKS.md  chain.py  ingestion.py  retriever.py
backend/app/models/: schemas.py
backend/app/services/: document_service.py
docs/: architecture.md  requirements.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessageList.tsx  SourceDocuments.tsx
frontend/src/components/documents/: DocumentList.tsx  UploadZone.tsx
frontend/src/lib/: api.ts  types.ts
