[project]
name = "rag-app-backend"
version = "0.1.0"
description = "社内ナレッジQ&A RAGアプリ バックエンド"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
